CheckStyleの対応